# simdjson_test_wrapper

./: CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: anaconda-upload.yml  conda-build.yml
examples/: basic.py
recipe/: meta.yaml
src/: simdjson_test_wrapper.cpp
