[build-system]
requires = ["scikit-build-core>=0.11", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "simdjson-test-wrapper"
version = "0.1.0"
description = "Minimal Python bindings for JSON parsing and serialization."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

[tool.scikit-build]
minimum-version = "0.11"
